# CX-Library

./: CMakeLists.txt  README.md  cxConfig.cmake.in
include/CX/: AssetManager.hpp  AudioManager.hpp  Camera.hpp  Color.hpp  Concepts.hpp  Config.hpp  Errors.hpp  Grid.hpp  NavigationManager.hpp  ParticleManager.hpp
include/CX/Bar/: Bar.hpp  BarStyle.hpp
include/CX/Button/: Button.hpp  ButtonStyle.hpp
include/CX/Circle/: Circle.hpp  CircleBounds.hpp  CircleStyle.hpp
include/CX/EventHandler/: Controller.hpp  EventHandler.hpp  Key.hpp  Keybind.hpp  Mouse.hpp
include/CX/Math/: Angle.hpp  Constants.hpp  Math.hpp  Random.hpp  Trigonometry.hpp
include/CX/Plane/: Plane.hpp  PlaneStyle.hpp
include/CX/Ray/: Ray.hpp  RaycastResult.hpp
include/CX/Rect/: Rect.hpp  RectStyle.hpp
include/CX/Slider/: Slider.hpp  SliderStyle.hpp
include/CX/Sprite/: Animation.hpp  Sprite.hpp  SpriteStyle.hpp
include/CX/Text/: FontStyle.hpp  Text.hpp  TextStyle.hpp
include/CX/TextInput/: TextInput.hpp  TextInputFunctions.hpp  TextInputStyle.hpp
include/CX/Timer/: BasicTimer.hpp  Timer.hpp  Wait.hpp
include/CX/UIElement/: ElementType.hpp  Functions.hpp  UIElement.hpp
include/CX/Vector/: Vec2.hpp  Vec3.hpp  Vec4.hpp  Vec5.hpp
shaders/: clipping_shader.frag
src/: AssetManager.cpp  AudioManager.cpp  Bar.cpp  Button.cpp  Camera.cpp  Circle.cpp  EventHandler.cpp  NavigationManager.cpp  ParticleManager.cpp  Plane.cpp  Rect.cpp  Slider.cpp  Sprite.cpp  Text.cpp  TextInput.cpp  UIElement.cpp
tests/: CMakeLists.txt
tests/.cache/clangd/index/: main.cpp.E554E2D0FD4BDFE1.idx
tests/data/: save.db
tests/project/: main.cpp
